--- a/_layouts/home-xiabb.html
+++ b/_layouts/home-xiabb.html
@@ -13,7 +13,7 @@ layout: default
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
-      {%- if post.category=="study" -%}
+      {%- if post.category=="xiabb" -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -30,7 +30,7 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    <p class="rss-subscribe">subscribe <a href="{{ "/blog-study/feed.xml" | relative_url }}">via RSS</a></p>
+    <p class="rss-subscribe">subscribe <a href="{{ "/blog-xiabb/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
 
 </div>
