--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,3 +25,24 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+ <!-- Gitalk comment start  -->
+
+ <!-- Link Gitalk  -->
+ <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+ <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
+ <div id="gitalk-container"></div>     <script type="text/javascript">
+     var gitalk = new Gitalk({
+
+     // Gitalk parameters
+         clientID: '7bf512cb411be5fc7ab1', //customize
+         clientSecret: '91cbdb3c5cf8a9a69dcf9fc80b5ac979e36d17dc', //customize
+         repo: 'santiagochou.github.io', //customize
+         owner: 'santiagochou', //customize
+         admin: ['santiagochou'], //customize
+         id: window.location.pathname, // leave this line as it is
+        
+     });
+     gitalk.render('gitalk-container');
+ </script> 
+ <!-- Gitalk end -->
