--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,8 +29,8 @@ layout: default
  <!-- Gitalk comment start  -->
 
  <!-- Link Gitalk  -->
- <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+ <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
  <div id="gitalk-container"></div>     <script type="text/javascript">
      var gitalk = new Gitalk({
 
