--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,11 +37,11 @@ layout: default
      // Gitalk parameters
          clientID: '7bf512cb411be5fc7ab1', //customize
          clientSecret: '91cbdb3c5cf8a9a69dcf9fc80b5ac979e36d17dc', //customize
-         repo: 'santiagochou.github.io', //customize
+         repo: 'blog-comments', //customize
          owner: 'santiagochou', //customize
          admin: ['santiagochou'], //customize
          id: window.location.pathname, // leave this line as it is
-        
+         distractionFreeMode: false  // Facebook-like distraction free mode
      });
      gitalk.render('gitalk-container');
  </script> 
