--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
      // Gitalk parameters
          clientID: '24dc804589780be4cb76', //customize
          clientSecret: 'fbe1da1f91a67c1599887abf21f09161e8772e55', //customize
-         repo: 'blog-comments', //customize
+         repo: 'santiagochou.github.io', //customize
          owner: 'santiagochou', //customize
          admin: ['santiagochou'], //customize
          id: window.location.pathname, // leave this line as it is
