--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ layout: default
          repo: 'blog-comments', //customize
          owner: 'santiagochou', //customize
          admin: ['santiagochou'], //customize
-         id: 1,
+         id: location.pathname,,
          distractionFreeMode: false  // Facebook-like distraction free mode
      });
      gitalk.render('gitalk-container');
