--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,10 +38,10 @@ layout: default
      // Gitalk parameters
          clientID: '24dc804589780be4cb76', //customize
          clientSecret: 'fbe1da1f91a67c1599887abf21f09161e8772e55', //customize
-         repo: 'santiagochou.github.io', //customize
+         repo: 'blog-comments', //customize
          owner: 'santiagochou', //customize
          admin: ['santiagochou'], //customize
-         id: location.pathname,,
+         id: location.pathname,
          distractionFreeMode: false  // Facebook-like distraction free mode
      });
      gitalk.render('gitalk-container');
