--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,8 +30,9 @@ layout: default
  <!-- Gitalk comment start  -->
 
  <!-- Link Gitalk  -->
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
- <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+ <link rel="stylesheet" href="assets/gitalk_assets/gitalk.css">
+ <script src="assets/gitalk_assets/gitalk.min.js"></script>
+
  <div id="gitalk-container"></div>     <script type="text/javascript">
      var gitalk = new Gitalk({
 
