--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,11 +30,8 @@ layout: default
  <!-- Gitalk comment start  -->
 
  <!-- Link Gitalk  -->
- <link rel="stylesheet" href="assets/gitalk_assets/gitalk.css">
- <script src="assets/gitalk_assets/gitalk.min.js"></script>
- <!-- These 2 lines below can replace the 2 line above if the gitalk failed. Also can replace the content of above 2 files -->
- <!--   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">   -->
- <!--   <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>       -->
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+ <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 
  <div id="gitalk-container"></div>     <script type="text/javascript">
      var gitalk = new Gitalk({
