--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,8 @@ layout: default
          owner: 'santiagochou', //customize
          admin: ['santiagochou'], //customize
          id: location.pathname,
-         distractionFreeMode: false  // Facebook-like distraction free mode
+         distractionFreeMode: true ,  // Facebook-like distraction free mode
+         pagerDirection: 'last'
      });
      gitalk.render('gitalk-container');
  </script> 
