--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@ layout: default
          admin: ['santiagochou'], //customize
          id: location.pathname,
          distractionFreeMode: true ,  // Facebook-like distraction free mode
-         pagerDirection: 'last'
+         pagerDirection: 'last' // the 'last' is the last comment showed in the first postion. 'first' opposite.
      });
      gitalk.render('gitalk-container');
  </script> 
